tests/paczka1/fuzzy1/97033821.err
Error in line 4: iTugvrE A35 50,8
Error in line 31: iTugvrE A35 67,7
Error in line 33: iTugvrE A120 81,4
Error in line 27: y9mUbAN A35 51,9
